RESOLVED FIXED 112223
[WK2][Qt] Regression(145517) WebProcess asserts in debug build on WebKitTestRunner start
https://bugs.webkit.org/show_bug.cgi?id=112223
Summary [WK2][Qt] Regression(145517) WebProcess asserts in debug build on WebKitTestR...
Viatcheslav Ostapenko
Reported 2013-03-12 19:55:53 PDT
ASSERTION FAILED: !parameters.cookieStorageDirectory.isEmpty() && !parameters.cookieStorageDirectory.isNull() /home/sl/work/qtwebkit/Source/WebKit2/WebProcess/qt/WebProcessQt.cpp(141) : void WebKit::WebProcess::platformInitializeWebProcess(const WebKit::WebProcessCreationParameters&, CoreIPC::MessageDecoder&) 0 WebKit::WebProcess::platformInitializeWebProcess WebProcessQt.cpp 141 0x7ffff4273b14 1 WebKit::WebProcess::initializeWebProcess WebProcess.cpp 253 0x7ffff425e87e 2 CoreIPC::callMemberFunction<WebKit::WebProcess, void (WebKit::WebProcess::*)(WebKit::WebProcessCreationParameters const&, CoreIPC::MessageDecoder&), WebKit::WebProcessCreationParameters> HandleMessage.h 273 0x7ffff42e9cf1 3 CoreIPC::handleMessageVariadic<Messages::WebProcess::InitializeWebProcess, WebKit::WebProcess, void (WebKit::WebProcess::*)(WebKit::WebProcessCreationParameters const&, CoreIPC::MessageDecoder&)> HandleMessage.h 382 0x7ffff42e8eed 4 WebKit::WebProcess::didReceiveWebProcessMessage WebProcessMessageReceiver.cpp 52 0x7ffff42e733c 5 WebKit::WebProcess::didReceiveMessage WebProcess.cpp 602 0x7ffff425fcb2 6 CoreIPC::Connection::dispatchMessage Connection.cpp 757 0x7ffff3ff2a15 7 CoreIPC::Connection::dispatchMessage Connection.cpp 780 0x7ffff3ff2af0 8 CoreIPC::Connection::dispatchOneMessage Connection.cpp 806 0x7ffff3ff2cf9 9 WTF::FunctionWrapper<void (CoreIPC::Connection::*)()>::operator() Functional.h 218 0x7ffff4003324 10 WTF::BoundFunctionImpl<WTF::FunctionWrapper<void (CoreIPC::Connection::*)()>, void (CoreIPC::Connection*)>::operator()() Functional.h 496 0x7ffff4002f52 11 WTF::Function<void ()>::operator()() const Functional.h 704 0x7ffff4219538 12 WebCore::RunLoop::performWork RunLoop.cpp 91 0x7ffff4c2a635 13 WebCore::RunLoop::TimerObject::performWork RunLoopQt.cpp 48 0x7ffff4f5c886 14 WebCore::RunLoop::TimerObject::qt_static_metacall RunLoopQt.moc 68 0x7ffff4f5d1e3 15 QMetaCallEvent::placeMetaCall qobject.cpp 479 0x7ffff2c10727 16 QObject::event qobject.cpp 1070 0x7ffff2c11640 17 QApplicationPrivate::notify_helper qapplication.cpp 3352 0x7ffff31ffaf4 18 QApplication::notify qapplication.cpp 2783 0x7ffff31fd1d6 19 QCoreApplication::notifyInternal qcoreapplication.cpp 767 0x7ffff2bd74f6 20 QCoreApplication::sendEvent qcoreapplication.h 203 0x7ffff2bdada5 21 QCoreApplicationPrivate::sendPostedEvents qcoreapplication.cpp 1368 0x7ffff2bd85be 22 QCoreApplication::sendPostedEvents qcoreapplication.cpp 1228 0x7ffff2bd8185 23 postEventSourceDispatch qeventdispatcher_glib.cpp 278 0x7ffff2c486f7 24 g_main_dispatch gmain.c 2539 0x7fffede8dd53 25 g_main_context_dispatch gmain.c 3075 0x7fffede8dd53 26 g_main_context_iterate gmain.c 3146 0x7fffede8e0a0 27 g_main_context_iterate gmain.c 3083 0x7fffede8e0a0 28 g_main_context_iteration gmain.c 3207 0x7fffede8e164 29 QEventDispatcherGlib::processEvents qeventdispatcher_glib.cpp 423 0x7ffff2c48f33 30 QPAEventDispatcherGlib::processEvents qeventdispatcher_glib.cpp 125 0x7fffe7d1358e 31 QEventLoop::processEvents qeventloop.cpp 136 0x7ffff2bd458b 32 QEventLoop::exec qeventloop.cpp 212 0x7ffff2bd4859 33 QCoreApplication::exec qcoreapplication.cpp 1020 0x7ffff2bd7b82 34 WebCore::RunLoop::run RunLoopQt.cpp 69 0x7ffff4f5cab2 35 WebKit::WebProcessMainQt WebProcessMainQt.cpp 261 0x7ffff42730de 36 main MainQt.cpp 100 0x400f6b
Attachments
Patch (4.70 KB, patch)
2013-03-13 03:46 PDT, Jocelyn Turcotte
no flags
Patch (4.71 KB, patch)
2013-03-13 03:50 PDT, Jocelyn Turcotte
no flags
Jocelyn Turcotte
Comment 1 2013-03-13 03:46:25 PDT
Jocelyn Turcotte
Comment 2 2013-03-13 03:50:12 PDT
Created attachment 192898 [details] Patch Reworded the ChangeLog.
WebKit Review Bot
Comment 3 2013-03-13 04:29:15 PDT
Comment on attachment 192898 [details] Patch Clearing flags on attachment: 192898 Committed r145702: <http://trac.webkit.org/changeset/145702>
WebKit Review Bot
Comment 4 2013-03-13 04:29:19 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.