[WK2][Qt] Regression(145517) WebProcess asserts in debug build on WebKitTestRunner start https://bugs.webkit.org/show_bug.cgi?id=112223

Reviewed by Simon Hausmann.

We need to only enable the cookie jar and the disk cache conditionally
in the web process since we removed default paths and WKTR doesn't provide
them.

* WebProcess/qt/WebProcessQt.cpp:
(WebKit::WebProcess::platformSetCacheModel):
(WebKit::WebProcess::platformInitializeWebProcess):


Canonical link: https://commits.webkit.org/130560@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@145702 268f45cc-cd09-0410-ab3c-d52691b4dbfc